# python-cons

./: .pre-commit-config.yaml  MANIFEST.in  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pypi.yml  tests.yml
tests/: test_cons.py
